-- Version 0.1.1 (TBD) --

* Use proper file layout for the headers in the Git repository.
  - Ticket #2 by Quintus
  - PR #16 by TryExceptElse
  - This change does not affect programmes written against the
    stable release of Pathie. It only affects programmes that
    use Pathie from the Git repository, because the release
    tarballs have always been packaged in such a way that the
    headers reside under a separate pathie/ directory. These
    programmes need to be updated to the new include path.
* Deprecate direct use of headers under include/
  - PR #16 by TryExceptElse
  - Note: Programmes written against direct use of the include/
    directory continue to work for now. Shallow "glue" headers
    have been added to include the real headers. These deprecated
    headers however are going to be removed with the next minor
    release.
* Add experimental MacOS support
  - PR #11 by XapaJIaMnu
* Fix Path() constructor falsely "sanitising" Windows UNC (network)
  paths by replacing the leading double backslash.
  - Ticket #14 by frankseide
* Fix entry_operator++ being recursive
  - Ticket #15 by oktonion
* Fix some compiler warnings
  - PR #13 by TryExceptElse
* Fix compilation on MSVC failing due to missing F_OK macro
  - PR #9 by aarcangeli
* Fix mode loss problem on MinGW
  - PR #8 by Bihlerben
* Fix MinGW compilation error due to undeclared identifiers
  - PR #6 by Bihlerben
* Fix compilation error with entry_iterator.cpp on UNIX
  - PR #4 by progsource
* Improve documentation
  - PR #1 by jibsen
  - PR #3 by progsource

-- Version 0.1.0 (2017-10-28) --

* Add Pathie::Tempdir and Pathie::Tempfile classes for
  creating temporary directories and files.
* Add Pathie::entry_iterator, Path::begin_entries(), and
  Path::end_entries(). These allow you to use real C++
  iterators for working with directory entries.
* Change Path::find() to take a callback instead of std::function to
  make it compile under C++98.
* Add Path::operator/=.